<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register_login_page">Belum memiliki akun?</string>
    <string name="register">Register</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="register_success">Akun berhasil didaftarkan</string>
    <string name="login_success">Anda berhasil login</string>
    <string name="preview_image">Preview Image</string>
    <string name="detail_image">detail_image</string>
    <string name="logout">logout</string>
    <string name="upload">upload</string>
    <string name="banner">banner</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="icon_map">Icon Map</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>